--- a/mystyle.css
+++ b/mystyle.css
@@ -20,6 +20,8 @@ h4 {
     display: inline;
     font-size: 24px;
     font-weight: 100;
+    margin-inline-start: 15px;
+    margin-inline-end: 15px;
 }
 
 button {
